fixed spacing

--- a/styles/home-main.css
+++ b/styles/home-main.css
@@ -364,6 +364,6 @@
         margin-bottom: 15px;
     }
     .abt-title {
-        margin-top: -85px;
+        margin-top: -95px;
     }
 }
